# py-ds-template1

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  pyproject.toml
data/: some_data.csv
py_ds_template1/: __init__.py  some_code.py
py_ds_template1/utils/: some_functions.py
tests/: test_some_functions.py
