[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-ds-template1"
version = "2024.6.7"
description = "A template for creating Python Data Science projects"

[tool.pytest.ini_options]
minversion = "6.0"  # Specify the minimum pytest version
addopts = "-ra -q"  # Default options: -rA for detailed summary, -q for less verbose output
testpaths = [
    "tests",
]
